<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/sliding_myorders"
            android:title="@string/myOrders" />

        <item
            android:id="@+id/nav_whishlist"
            android:icon="@drawable/sliding_whishlist"
            android:title="@string/myWhishList" />

        <item
            android:id="@+id/nav_shippingAddress"
            android:icon="@drawable/sliding_shipping_address"
            android:title="@string/shppingAddress" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sliding_settings"
            android:title="@string/accountSettings" />

        <item
            android:id="@+id/nav_resetPassword"
            android:icon="@drawable/sliding_reset"
            android:title="@string/resetPassword" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/sliding_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/sliding_contact"
            android:title="@string/contactUs" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/sliding_feedback"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_callUs"
            android:icon="@drawable/sliding_call"
            android:title="@string/callUs" />

        <item
            android:id="@+id/nav_shareWithFriends"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:icon="@drawable/sliding_share"
            android:title="@string/shareWithFriends" />

        <item
            android:id="@+id/nav_rateUs"
            android:icon="@drawable/sliding_rate"
            android:title="@string/rateUs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/sliding_logout"
            android:title="@string/logout" />
        <item
            android:title=""
            android:enabled="false" />
    </group>

</menu>
