<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.95"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_8">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/forget_icon"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_20"
            android:paddingTop="@dimen/dimen_20"
            android:text="@string/reset_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:paddingTop="@dimen/dimen_20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reset_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/dimen_4"
                android:paddingEnd="@dimen/dimen_4"
                android:textSize="@dimen/dimen_14s"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/reset_old"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/custom_cursor_colored"
                android:background="@drawable/address_edittext_background"/>

            <EditText
                android:id="@+id/reset_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_4"
                android:paddingEnd="@dimen/dimen_4"
                android:textSize="@dimen/dimen_14s"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/reset_new"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/custom_cursor_colored"
                android:background="@drawable/address_edittext_background"/>

            <EditText
                android:id="@+id/reset_confirm_passowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_4"
                android:paddingEnd="@dimen/dimen_4"
                android:textSize="@dimen/dimen_14s"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/reset_confirm_new"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@drawable/custom_cursor_colored"
                android:background="@drawable/address_edittext_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_20"
            android:paddingStart="@dimen/dimen_10"
            android:paddingEnd="@dimen/dimen_10"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_reset_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_big"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="bottom">
        <include
            android:id="@+id/personal_footer"
            layout="@layout/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>