<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/congrag_footer"
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
    <ScrollView
        android:id="@+id/address_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/congrag_footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:layout_gravity="center"
                android:background="@drawable/register_logo"
                android:contentDescription="@string/app_name"/>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/congrag"-->
                <!--android:layout_marginTop="@dimen/dimen_40"-->
                <!--android:layout_marginBottom="@dimen/dimen_40"-->
                <!--android:layout_gravity="center"-->
                <!--android:textStyle="bold"-->
                <!--android:textSize="@dimen/dimen_17s"-->
                <!--android:textColor="@color/blackText"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:text="@string/thank_you"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_17s"
                android:textColor="@color/cart_total"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congrag_order_placed"
                android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/cong_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_cong_continue_shopping"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_weight="0.95"
                    android:background="@drawable/button_continue_shopping"
                    android:text="@string/button_continue_shopping"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/button_cong_track_order"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_weight="0.95"
                    android:background="@drawable/button_add_to_cart"
                    android:text="@string/button_tract_order"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/transparent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#99000000"
        android:visibility="gone">
    </LinearLayout>

    <include
        android:id="@+id/floating_layout"
        layout="@layout/floating_menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>